--- a/spacebattle-server.vcxproj.filters
+++ b/spacebattle-server.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="net\BitStream.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\WaitQueue.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="net\TCPSocket.h">
@@ -84,6 +87,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="net\BitStream.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\WaitQueue.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
