--- a/spacebattle-server.vcxproj
+++ b/spacebattle-server.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\ClientCtx.cpp" />
     <ClCompile Include="src\GameManager.cpp" />
     <ClCompile Include="src\NetworkManager.cpp" />
+    <ClCompile Include="src\RoomManager.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\WaitQueue.cpp" />
     <ClCompile Include="util\Logger.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="include\GameManager.h" />
     <ClInclude Include="include\NetworkManager.h" />
     <ClInclude Include="include\Packet.h" />
+    <ClInclude Include="include\RoomManager.h" />
     <ClInclude Include="include\Server.h" />
     <ClInclude Include="include\WaitQueue.h" />
     <ClInclude Include="net\BitStream.h" />
