캐릭터, 전투기 클래스 일부 구현

--- a/spacebattle-server.vcxproj
+++ b/spacebattle-server.vcxproj
@@ -149,18 +149,24 @@
     <ClCompile Include="src\ClientCtx.cpp" />
     <ClCompile Include="src\GameManager.cpp" />
     <ClCompile Include="src\NetworkManager.cpp" />
+    <ClCompile Include="src\Pilot.cpp" />
     <ClCompile Include="src\RoomManager.cpp" />
     <ClCompile Include="src\Server.cpp" />
+    <ClCompile Include="src\Spacecraft.cpp" />
     <ClCompile Include="src\WaitQueue.cpp" />
     <ClCompile Include="util\Logger.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Character.h" />
     <ClInclude Include="include\Config.h" />
     <ClInclude Include="include\GameManager.h" />
     <ClInclude Include="include\NetworkManager.h" />
     <ClInclude Include="include\Packet.h" />
+    <ClInclude Include="include\Pilot.h" />
     <ClInclude Include="include\RoomManager.h" />
     <ClInclude Include="include\Server.h" />
+    <ClInclude Include="include\Skill.h" />
+    <ClInclude Include="include\Spacecraft.h" />
     <ClInclude Include="include\WaitQueue.h" />
     <ClInclude Include="net\BitStream.h" />
     <ClInclude Include="net\IOCP.h" />
