--- a/spacebattle-server.vcxproj.filters
+++ b/spacebattle-server.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="src\Spacecraft.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\Skill.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Character.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="net\TCPSocket.h">
